fix virtual keyboard toolbar tooltips not showing due to overflow hidden

--- a/css/virtual-keyboard.less
+++ b/css/virtual-keyboard.less
@@ -1,4 +1,3 @@
-
 //
 // Breakpoints
 //
@@ -17,7 +16,7 @@
 @shadow4: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 @shadow5: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 
-// 
+//
 // blue-50   #e2f0fd
 // blue-100   #b6d9fb
 // blue-200   #86c0f9
@@ -86,7 +85,7 @@
 
   --keycap-shift-font-size: 16px;
   --keycap-shift-color: var(--keyboard-accent-color);
-  --environment-shadow: rgba(0,0,0,0.4);
+  --environment-shadow: rgba(0, 0, 0, 0.4);
 }
 
 .if-can-undo,
@@ -212,7 +211,7 @@ body > .ML__keyboard.is-visible.animate > .MLK__backdrop {
 
   background: var(--keyboard-background);
 
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .backdrop-is-transparent .MLK__backdrop {
@@ -412,7 +411,7 @@ body > .ML__keyboard.is-visible.animate > .MLK__backdrop {
       line-height: 0.8;
       font-size: calc(min(1rem, var(--keycap-small-font-size, 16px)));
       font-weight: 600;
-      padding: 8px 12px 8px 12px;      
+      padding: 8px 12px 8px 12px;
       &:hover {
         background: var(--keycap-secondary-background-hover);
       }
@@ -423,7 +422,7 @@ body > .ML__keyboard.is-visible.animate > .MLK__backdrop {
       color: #ddd;
     }
     .action.primary:hover {
-      background: #0d80f2 ; // blue-500
+      background: #0d80f2; // blue-500
       color: #fff;
     }
 
@@ -976,7 +975,7 @@ Note there are a different set of tooltip rules for the keyboard toggle
     --variant-panel-background: #303030;
     --variant-keycap-text: var(--keycap-text);
     --variant-keycap-text-active: #fff;
-    --environment-shadow: rgba(255,255,255,0.1);
+    --environment-shadow: rgba(255, 255, 255, 0.1);
   }
 }
 /* Same as the media query, but with a class */
@@ -986,7 +985,7 @@ Note there are a different set of tooltip rules for the keyboard toggle
   --keyboard-border: transparent;
   --keyboard-toolbar-text: #e3e4e8;
   --keyboard-toolbar-text-active: var(--keyboard-accent-color);
---keyboard-toolbar-background: transparent;
+  --keyboard-toolbar-background: transparent;
   --keyboard-toolbar-background-hover: #303030;
   --keyboard-toolbar-background-selected: transparent;
 
@@ -1010,7 +1009,7 @@ Note there are a different set of tooltip rules for the keyboard toggle
   --variant-panel-background: #303030;
   --variant-keycap-text: var(--keycap-text);
   --variant-keycap-text-active: #fff;
-  --environment-shadow: rgba(255,255,255,0.1);
+  --environment-shadow: rgba(255, 255, 255, 0.1);
 }
 
 [theme='light'] .ML__keyboard {
@@ -1059,17 +1058,17 @@ Note there are a different set of tooltip rules for the keyboard toggle
   background-color: var(--variant-panel-background, #fff);
   box-shadow: 0 0 30px 0 var(--environment-shadow, rgba(0, 0, 0, 0.4));
   pointer-events: all;
-  
+
   .MLK__array-buttons {
-    height: calc(var(--private-panel-height) * 5/4);
-    width: calc(var(--private-panel-height) * 5/4);
+    height: calc(var(--private-panel-height) * 5 / 4);
+    width: calc(var(--private-panel-height) * 5 / 4);
     margin-left: calc(0px - var(--private-panel-height) * 0.16);
     margin-top: calc(0px - var(--private-panel-height) * 0.19);
 
     .font {
       fill: white;
     }
-    
+
     circle {
       fill: #7f7f7f;
       transition: fill 300ms;
@@ -1122,18 +1121,21 @@ Note there are a different set of tooltip rules for the keyboard toggle
         }
         background-color: var(--keycap-background, white);
 
-        path, line {
+        path,
+        line {
           stroke: var(--keycap-text, #e3e4e8);
           stroke-width: 2;
           stroke-linecap: round;
         }
-        rect, path {
+        rect,
+        path {
           fill-opacity: 0;
         }
         &.active {
           pointer-events: none;
           background-color: var(--keycap-background-active, #f5f5f7);
-          path, line {
+          path,
+          line {
             stroke: var(--keyboard-accent-color, #0c75d8);
           }
           circle {
@@ -1143,5 +1145,4 @@ Note there are a different set of tooltip rules for the keyboard toggle
       }
     }
   }
-  
 }
